test/reject/06-malformed-basic-class.puml
@startuml

class ThisIsFine {

}

@enduml

@startuml

class This Is Not Fine {
    
}

@enduml